# catalogue

./: .gitignore  CHANGES.md  CITATION.cff  Dockerfile  Makefile  README.md  TESTING.md  compose.yml  docker-compose.yml  download_catalog.sh  pyproject.toml  upload_ops.sh
.github/workflows/: package.yaml  publish-crate.yml
app/: file_cache.py  norad_cache.py  restful_api.py  sun_object.py
app_skyfield/: README.md  pyproject.toml  skyfield_catalog.py  sp3_catalog.py
doc/: slide.tex
nginx/: nginx.conf
python-client/: README.md
python-client/tart_client/: __init__.py  cli.py
rust-client/: Cargo.toml  README.md
rust-client/src/: main.rs
tart-catalog-client-py/: README.md  pyproject.toml
tart-catalog-client-py/tart_client/: __init__.py  cli.py  test_client.py
tart-catalog-client-rs/: Cargo.toml  README.md
tart-catalog-client-rs/src/: main.rs
tart-catalogue/: pyproject.toml
tart-catalogue-server/: .gitignore  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml
tart-catalogue-server/nginx/: nginx.conf
tart-catalogue-server/tart_catalogue/: .gitignore  flux.json  flux_data.py  main.py  norad_cache.py
tart-catalogue-server/test/: test_api.py
tart-catalogue/tart_catalogue/: apidoc.json  file_cache.py  main.py  norad_cache.py  sky_object.py
tart_catalogue/: file_cache.py  main.py  norad_cache.py  sky_object.py  sun_object.py  test_main.py
test/: test_api.py
test-vectors/: generate.py  test_vectors.json
