[project]
name = "tart_catalogue"
version = "0.1.0"
description = "TART Source Catalogue"
authors = [
    {name = "Tim Molteno",email = "tim@elec.ac.nz"}
]
license = {text = "GPL"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "sgp4 (>=2.25,<3.0)",
    "requests (>=2.32.4,<3.0.0)",
    "tart (>=1.4.1,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]
packages = [{include = "tart_catalogue"}]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
