[project]
name = "app-skyfield"
version = "0.5.1"
description = "Catalog for GNSS objects"
authors = [
    {name = "Tim Molteno",email = "tim@molteno.net"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.2.0",
    "matplotlib>=2.2.5",
    "numpy>=1.16.6",
    "skyfield (>=1.51,<2.0)",
    "sp3>=1.1.1",
]
