[package]
name = "tart-catalogue"
version = "0.2.0"
edition = "2021"
description = "Rust client for the TART catalogue /ephemerides endpoint"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sgp4 = "0.9"
tokio = { version = "1", features = ["full"] }
