[package]
name = "tart-catalogue"
version = "0.3.0"
edition = "2024"
description = "Rust client for the TART catalogue /ephemerides endpoint"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sgp4 = "2"
tokio = { version = "1", features = ["full"] }
