[package]
name = "tart-catalogue-client"
version = "0.4.1"
edition = "2024"
description = "Rust client for the TART catalogue /ephemerides endpoint"
authors = ["Tim Molteno <tim@elec.ac.nz>"]
license = "GPL-3.0-only"
repository = "https://github.com/tart-telescope/catalogue"
homepage = "https://github.com/tart-telescope/catalogue"
keywords = ["tart", "satellite", "tle", "sgp4", "gnss"]
categories = ["science", "command-line-utilities"]
readme = "README.md"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sgp4 = "2"
regex = { version = "1", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["full"] }
