[project]
name = "tart_catalogue"
version = "0.4.1"
description = "TART Source Catalogue"
authors = [
    {name = "Tim Molteno",email = "tim@elec.ac.nz"}
]
license = {text = "GPL"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "sgp4 (>=2.25,<3.0)",
    "requests (>=2.32.4,<3.0.0)",
    "tart (>=1.4.1,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]
packages = [{include = "tart_catalogue"}]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tart_catalogue"]
